crates/macros/blueprint-proc-macro/tests/invalid_cases/job/04_missing_id.rs
use blueprint_sdk::macros::job;

#[job(params(n), result(Vec<u8>))]
fn keygen(n: u16) -> Vec<u8> {
    Vec::new()
}

fn main() {}
