crates/macros/blueprint-proc-macro/tests/invalid_cases/job/04_missing_id.stderr
error: unexpected end of input, Missing `id` argument in attribute
 --> tests/invalid_cases/job/04_missing_id.rs:3:1
  |
3 | #[job(params(n), result(Vec<u8>))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `job` (in Nightly builds, run with -Z macro-backtrace for more info)
